# lbrxVoice

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  FRESH_INSTALL.md  HOW-TO-INSTALL.md  INSTALL_FOR_HUMANS.md  MVP_READY.md  PROJECT_STATUS.md  PYTHON_VERSION_NOTES.md  README.md  README_pl.md  STATUS_REPORT.md  TTS_PIPELINE_README.md  UV_INSTALL.md  WHISPER_CONFIG_ANALYSIS.md  batch_transcribe_all.py  dia_mlx_converter.py  diagnose.py  epic-readme.mdx  hello.py  install.sh  lbrx_voice_pipeline.py  pyproject.toml  requirements.txt  run_ultimate_tui.py  run_with_logs.sh  simple_test.py  start_servers.py  start_xtts_server.py  test_audio_recording.py  test_complete_system.py  test_components.py  test_edge_tts.py  test_edge_tts_integration.py  test_mvp_components.py  test_optimized_transcription.py  test_pipeline.py  test_pipeline_polish.py  test_tts_api.py  (+6 more)
.claude/: settings.local.json
.gemini_audit/20250603/: 00_executive_summary.md  01_project_identity_and_goals.md  02_current_project_structure_analysis.md  03_component_assessment_from_docs.md  04_claude_files_insights.md  05_identified_discrepancies_and_risks.md  06_roadmap_to_lbrxvoicepro_recommendations.md  07_addressing_redundancy_and_overengineering.md
audio/: __init__.py  recorder.py
config/: __init__.py  llm_config.py
docs/: PROJECT_STATUS.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md  how_to_transcribe.md
examples/: __init__.py  conversational_agent.py  lbrx_whisper_demo.py  test_mlx_audio_tts.py  voice_chat_realtime.py
issues/: known-issues.md
lbrxchat/: README_ULTIMATE.md  __init__.py  lbrx_ultimate_tui.py  mlx_vet_rag_tui.py  requirements_ultimate.txt
lbrxchat/docs/: next-features.md
lbrxchat/tabs/: __init__.py  transcribe_files.py  transcribe_voice.py  tts.py  voice_ai.py
lbrxchat/widgets/: __init__.py  audio_spectrogram.py
mlx_whisper/: __init__.py
rag/: __init__.py  simple_rag.py
rag_db/: chroma.sqlite3
scripts/: __init__.py  batch_transcribe_polish.py  batch_transcribe_remaining.py
test_pipeline/: TESTING_GUIDE.md  test_client.py  test_dia_full.py  test_dia_simple.py  test_dia_tts.py  test_dia_websocket.py  test_english_whisper.py  test_lbrx_voice.py  test_mlx_audio.py  test_websocket.py
tools/: __init__.py  benchmark.py  check_results.py  convert-to-mlx.sh  convert.py  dia_mlx_converter.py  dia_to_mlx_converter.py  list_results_api.py  tui_dashboard.py  tui_whisper_config.py  whisper_config.py  whisper_config_tui.py
tts_servers/: __init__.py  __main__.py  edge_tts_server.py  xtts_mlx.py  xtts_rest_api.py
tts_servers/common/: __init__.py  config.py  models.py
tts_servers/csm/: __init__.py  rest_api.py
tts_servers/dia/: __init__.py  mlx_audio_wrapper.py  mlx_model.py  pure_mlx_model.py  rest_api.py  websocket_server.py
whisper_servers/: __main__.py
whisper_servers/batch/: api.py  transcription.py
whisper_servers/common/: config.py  logging.py  utils.py
whisper_servers/realtime/: __init__.py  api.py  transcription.py
whisper_servers/scripts/: run_batch.py  (+1 more)
(+1 files in other folders)
