[project]
name = "lbrxwhisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "audiofile>=1.5.1",
    "audresample>=1.3.3",
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "mlx>=0.25.2",
    "mlx-audio>=0.2.3",
    "mlx-lm>=0.24.1",
    "mlx-whisper>=0.4.2",
    "ollama>=0.4.9",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "rich>=14.0.0",
    "silero-vad>=5.1.2",
    "soundfile>=0.13.1",
    "textual>=3.2.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
