[project]
name = "lbrxwhisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.0.0",
    "audiofile>=1.2.0",
    "audresample>=1.3.0",
    "fastapi>=0.115.0",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.0",
    "huggingface-hub>=0.26.0",
    "librosa>=0.10.0",
    "mlx>=0.25.0",
    "mlx-audio>=0.2.0",
    "mlx-lm>=0.24.0",
    "mlx-whisper>=0.4.0",
    "numpy>=1.26.0",
    "ollama>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.18",
    "rich>=13.0.0",
    "scipy>=1.12.0",
    "silero-vad>=5.0",
    "soundfile>=0.12.0",
    "textual>=0.89.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
